--- a/00-O1-CS1B-ASI-Dec-2022/O1-Question-4.Rmd
+++ b/00-O1-CS1B-ASI-Dec-2022/O1-Question-4.Rmd
@@ -38,12 +38,19 @@ pre {
 
 ---
 
-Q. 4) Government of “Actuaria” is operating a popular jackpot lottery called “Power Ball”. The 
-game consists of two draws as given below –
-Draw 1 = Drawing 5 White Balls from a set of 69 White Balls.
-Draw 2 = Drawing 1 Red Ball (Power Ball) from a set of 26 Red Balls (Power Balls).
-After drawing 5 white balls and the power ball, a ticket is issued for INR 0.50. A specimen 
-ticket is given below –
+Q. 4) Government of “Actuaria” is operating a popular jackpot lottery called “***Power Ball***”. 
+
+The 
+game consists of two draws as given below 
+
+* Draw 1 = Drawing 5 White Balls from a set of 69 White Balls.
+* Draw 2 = Drawing 1 Red Ball (Power Ball) from a set of 26 Red Balls (Power Balls).
+
+After drawing 5 white balls and the power ball, a ticket is issued for INR 0.50. 
+
+A specimen ticket is given below –
+
+<pre><code>
 GOVERNMENT OF ACTUARIA
 “POWER BALL LOTTERY”
 Draw 1 – White Balls
@@ -51,6 +58,7 @@ Draw 1 – White Balls
 Draw 2 – Power Ball
 21
 Ticket Price - INR 0.50
+</code></pre>
 
 
 ---
@@ -58,8 +66,12 @@ Ticket Price - INR 0.50
 The Government of Actuaria publishes its draw of 5 White Balls and the Power Ball. If all 
 the 5 White Balls and the Power Ball drawn by the ticketholder exactly match with the balls 
 drawn by the Government, then the ticketholder is entitled to a jackpot. The amount of 
-jackpot is INR 2 crore. Kindly note that for white balls, the order is not considered relevant 
+jackpot is INR 2 crore. 
+* Kindly note that for white balls, the order is not considered relevant 
 while matching.
+
+
+
 There are other prizes available depending on the white/power balls matched 
 (notwithstanding the order for white balls). The prize money for various matches can be 
 found in the following table as per the official website of Government of Actuaria: -
@@ -94,10 +106,10 @@ dhyper(3,m=5,n=64,k=5)
 
 Here the arguments of dhyper function can be explained as below –
 
-- x denotes the value of white balls to be matched.
-- m denotes the maximum number of successes.
-- n denotes the maximum number of failures.
-- k denotes the total number of draws.
+* x denotes the value of white balls to be matched.
+* m denotes the maximum number of successes.
+* n denotes the maximum number of failures.
+* k denotes the total number of draws.
 
 ---
 
@@ -105,19 +117,19 @@ Here the arguments of dhyper function can be explained as below –
 
 i)
 a) Create two separate vectors w_draw and r_draw for the white balls and power ball 
-to be matched under cases A to I. (2)
+to be matched under cases A to I.
 b) State the probability mass function of hyper-geometric distribution in terms of the 
-arguments x, m, n and k as defined earlier. (2)
+arguments x, m, n and k as defined earlier.
 c) Using the vectors created in part (i)(a) and the dhyper function as illustrated earlier, 
 create two separate result vectors prob_w_draw and prob_r_draw showing the 
-probabilities of matching white balls and power ball under Cases A to I. (4)
+probabilities of matching white balls and power ball under Cases A to I. 
 Probability of matching white balls is independent of the probability of matching the power 
 ball.
 
 ---
 
 d) Calculate the joint probabilities of matching white balls and power balls using result 
-vectors prob_w_draw and prob_r_draw created in part (i)(c). (2)
+vectors prob_w_draw and prob_r_draw created in part (i)(c).
 e) Create a vector prize showing the prize money under cases A to I. 
 
 ---
@@ -125,11 +137,12 @@ e) Create a vector prize showing the prize money under cases A to I.
 ### Exercises
 
 f) Determine the total expected prize money pay-out using the joint probabilities 
-determined in part (i)(d) and the prize money vector created in part (i)(e). (2)
+determined in part (i)(d) and the prize money vector created in part (i)(e).
 
 g) Assuming that there are no other costs to the Government in operating the lottery 
 expect the prize money pay-out, calculate the profits, if any, implicit in the ticket 
-price. (1)
+price. 
+
 ii) If instead of using the hyper-geometric distribution, we decided to use the binomial 
 distribution for modelling the probabilities of matching white balls and power ball.
 a) State the probability mass function of binomial distribution in terms of arguments x, 
@@ -141,17 +154,17 @@ m, n and k as defined earlier.
 
 b) Re-determine the joint probabilities using the dbinom function and arrive at the total 
 expected prize money pay-out. (4)
-iii) Point out the difference, if any, in the outcomes under part (i) and (ii). (2)
-iv) Determine the mean and variance of both the binomial distribution and hypergeometric distribution for random variable X (matching white balls) and comment on 
-the differences in the two. (3)
-v) Which distribution is more suitable to model these matching probabilities – hypergeometric or binomial? Substantiate with reasons. (2)
+iii) Point out the difference, if any, in the outcomes under part (i) and (ii).
+iv) Determine the mean and variance of both the binomial distribution and hyper-geometric distribution for random variable X (matching white balls) and comment on 
+the differences in the two.
+v) Which distribution is more suitable to model these matching probabilities – hyper-geometric or binomial? Substantiate with reasons. 
 
 ---
 
 ### Part A
 
 Solution 4:
-i) a) We define two data sets w_draw and r_draw corresponding to the white balls and red balls 
+i) a) We define two data sets <tt>w_draw<ttand <tt>r_draw</ttcorresponding to the white balls and red balls 
 to be matched for cases A to I. 
 R Code and Output:
 
@@ -165,12 +178,12 @@ r_draw <- c(1,0,1,0,1,0,1,1,1) # red balls to be matched corresponding to cases 
 
 b) Formula for the probability mass function of Hyper-Geometric Distribution in terms of the 
 arguments specified in the question is given below:
-P(X=x) = mCx * nC(k-x) / (m+n)Ck
+$$P(X=x) = mCx * nC(k-x) / (m+n)Ck$$
 Where –
 
 x = 0, 1, 2, 3, ………………
 0 < p < 1 
-(p = m/(m+n)) [2]
+(p = m/(m+n)) 
 
 ---
 
@@ -212,30 +225,37 @@ print(prob_draw)
 ```
 
  3.422298e-09 8.555745e-08 1.095135e-06 2.737838e-05 6.899352e-05 1.724838e-03
-[7] 1.425866e-03 1.087223e-02 2.609335e-02 [2]
+[7] 1.425866e-03 1.087223e-02 2.609335e-02 
 
 ---
 
 e) We define another data set prize which defines the prize amounts for Cases A to I.
 R Code and Output:
-> 
-> prize <- c(20000000,1000000,50000,100,100,7,7,4,4)
-> print(prize)
+
+prize <- c(20000000,1000000,50000,100,100,7,7,4,4)
+print(prize)
  2e+07 1e+06 5e+04 1e+02 1e+02 7e+00 7e+00 4e+00 4e+00 
  
 ---
 
 ### Part F
 
-f) We then define amt by multiplying prob_draw with prize to arrive at the expected amount one 
+We then define amt by multiplying prob_draw with prize to arrive at the expected amount one 
 can win from the lottery / jackpot.
-R Code and Output:
-> amt = prize * prob_draw
-> print(amt)
+
+<tt>R Code and Output:</tt>
+```{r}
+amt = prize * prob_draw
+print(amt)
+```
+
  0.068445956 0.085557445 0.054756765 0.002737838 0.006899352 0.012073867
 [7] 0.009981063 0.043488918 0.104373403
-> print(sum(amt))
- 0.3883146 [2]
+print(sum(amt))
+ 0.3883146 
+ 
+---
+
 g) Since, the expected prize amount is INR 0.39 and the prize of the lottery ticket is INR 0.50, 
 there is a profit of INR 0.11 implicit in the ticket price. 
 
@@ -245,11 +265,11 @@ there is a profit of INR 0.11 implicit in the ticket price.
 
 ii)a) Formula for the probability mass function of Binomial Distribution in terms of the arguments 
 specified in the question is given below:
-P(X=x) = kCx * (p)x * (1-p)(k-x)
+$$P(X=x) = kCx * (p)x * (1-p)(k-x)$$
 Where –
 x = 0, 1, 2, 3, ………………
 0 < p < 1 
-(p = m/(m+n)) [2]
+(p = m/(m+n)) 
 
 
 ---
@@ -259,23 +279,26 @@ x = 0, 1, 2, 3, ………………
  b) The joint probabilities and the expected prize money pay-out is re-determined using binomial 
 distribution for determining matching probabilities:
 R Code and Output:
-> prob_w_draw_bin <- dbinom(w_draw,5,5/69,log=FALSE)
-> print(prob_w_draw_bin)
+prob_w_draw_bin <- dbinom(w_draw,5,5/69,log=FALSE)
+print(prob_w_draw_bin)
  1.998042e-06 1.998042e-06 1.278747e-04 1.278747e-04 3.273592e-03
 [6] 3.273592e-03 4.190197e-02 2.681726e-01 6.865219e-01
-> prob_r_draw_bin <- dbinom(r_draw,1,1/26,log=FALSE)
-> print(prob_r_draw_bin)
+prob_r_draw_bin <- dbinom(r_draw,1,1/26,log=FALSE)
+print(prob_r_draw_bin)
  0.03846154 0.96153846 0.03846154 0.96153846 0.03846154 0.96153846
 [7] 0.03846154 0.03846154 0.03846154
-> prob_draw_bin = prob_w_draw_bin * prob_r_draw_bin
-> print(prob_draw_bin)
+
+---
+
+prob_draw_bin = prob_w_draw_bin * prob_r_draw_bin
+print(prob_draw_bin)
  7.684776e-08 1.921194e-06 4.918257e-06 1.229564e-04 1.259074e-04
 [6] 3.147684e-03 1.611614e-03 1.031433e-02 2.640469e-02
-> amt_bin = prize * prob_draw_bin
-> print(amt_bin)
+amt_bin = prize * prob_draw_bin
+print(amt_bin)
  1.53695522 1.92119403 0.24591284 0.01229564 0.01259074 0.02203379
 [7] 0.01128130 0.04125733 0.10561876
-> print(sum(amt_bin))
+print(sum(amt_bin))
  3.90914
 
 ---
@@ -298,18 +321,18 @@ on the higher side as compared to one determined using hyper-geometric distribut
 iv) We use the formulae from the tables to determine the mean and variance for X using both 
 binomial and hyper-geometric distributions.
 R Code and Output:
-> mean_x_hyper = 5 * 5/69
-> mean_x_binom = 5 * 5/69
-> print(mean_x_hyper)
+mean_x_hyper = 5 * 5/69
+mean_x_binom = 5 * 5/69
+print(mean_x_hyper)
  0.3623188
-> print(mean_x_binom)
+print(mean_x_binom)
  0.3623188
-> 
-> var_x_hyper = 5*5*(69-5)*(69-5)/((69-1)*69^2)
-> print(var_x_hyper)
+
+var_x_hyper = 5*5*(69-5)*(69-5)/((69-1)*69^2)
+print(var_x_hyper)
  0.3162954
-> var_x_binom = 5 * 5/69 * (1-5/69)
-> print(var_x_binom)
+var_x_binom = 5 * 5/69 * (1-5/69)
+print(var_x_binom)
 
  0.3360639
 Mean is the same in both cases.
@@ -330,7 +353,7 @@ However, as the size of the population (m+n) goes on increasing, binomial distri
 provides a good approximation for hyper-geometric probabilities.
 (1)
 (1)
-[2]
+
 
 ---
 
