--- a/00-S1-CS1B-ASI-Nov-2023/S1-Question-4.Rmd
+++ b/00-S1-CS1B-ASI-Nov-2023/S1-Question-4.Rmd
@@ -87,7 +87,9 @@ Page 6 of 6
 ii) Using part (i), calculate the expected claim number for Go and Clear.
 (3)
 iii) What additional information is required to use EBCT Model 2.
-(2)
+
+---
+
 iv) Travel company “Ease” launched a membership program last year providing full refund on cancellations. Number of cancellations believed to follow binomial distribution with parameters n=3 and 0.20.
 Number of cancellations in last year on 150 memberships are as follows:
 Cancellations
@@ -102,8 +104,8 @@ Members
 3
 Carry out goodness of fit test for the binomial model specified for number of cancellations on each membership.
 (5)
-[20]
-****************************
+
+---
 
 [20 Marks]
 Solution 4:
@@ -120,13 +122,13 @@ v<-var(rowMeans(q4)) - mean(apply(q4,1,var))/n
 Z<- n/(n+s/v)
 n
 [1] 4
-> m
+m
 [1] 373.1875
-> s
+s
 [1] 3967.854
-> v
+v
 [1] 16843.22
-> Z
+Z
 [1] 0.9443816
 [1+2+2+3+2]
 ii)
@@ -135,26 +137,30 @@ Z*rowMeans(q4[3:4,])+(1-Z)*m
 [3]
 iii)
 Risk Volumes are required to apply EBCT2
-[2]
+
+
+---
+
 iv)
 obs<-c(61,71,15,3)
 >
-> #Combine 2 and 3 since value of 3 is less than 5
-> obs.comb<-c(61,71,15 + 3)
+#Combine 2 and 3 since value of 3 is less than 5
+obs.comb<-c(61,71,15 + 3)
 >
-> p<-0.2
-> exp<-dbinom(c(0:1),3,p)
-> exp[3]<-1-pbinom(1,3,p)
-> sum(exp)
+p<-0.2
+exp<-dbinom(c(0:1),3,p)
+exp[3]<-1-pbinom(1,3,p)
+sum(exp)
 [1] 1
 >
-IAI CS1B-1123
+
+---
+
 Page 8 of 8
-> chisq.test(x=obs.comb,p=exp)
+chisq.test(x=obs.comb,p=exp)
 Chi-squared test for given probabilities
 data: obs.comb
 X-squared = 6.7371, df = 2, p-value = 0.03444
 Since p-value <0.5, we have sufficient evidence to reject the null hypothesis that cancellation follows bin(3,0.2)
-[Max 5]
-[20 Marks]
-***********************
+
+---
