--- a/00-J1-CS1B-ASI-September-2021/Question_5.Rmd
+++ b/00-J1-CS1B-ASI-September-2021/Question_5.Rmd
@@ -67,8 +67,10 @@ Insurer D
 
 ---
 
+#### Exercises
+
 i) Analyse the data using EBCT Model 1 and calculate the expected total claim payment to be made by each insurer (A, B, C and D) in the Year 5 by replacing question marks‘?’ with appropriate function in the R Code shared in file “Reference_RCode”.
-(2)
+
 ii) You are now required to calculate the expected total claim payment to be made by each insurer (A, B, C, D and E) in year 5, when additional data of insurer E is made available to you (By using EBCT Model 1).
 Additional claim payment data for Insurer E in INR Crores
 Year 1
@@ -81,11 +83,11 @@ Insurer E
 113
 112
 a) Provide the new R code so that ‘data’ includes insurer E and calculate the expected claim payment to be paid by each insurer in year 5.
-(2)
+
 b) Comment on the values of Z and ‘s/v’ ratio in part (ii) compared to part (i).
-(3)
+
 c) Comment on the change in expected claim payment for insurers A, B C and D in year 5 in part (ii) compared to part (i).
-(3)
+
 iii) Your manager is not happy with results based on EBCT 1 model. He has now provided you additional information about volume measure for these 5 insurers over Year 1 to Year 5.
 Volume measure (Year 1 to Year 5)
 Year 1
@@ -127,8 +129,8 @@ Insurer E
 ---
 
 Analyse the data using EBCT Model 2 to calculate the expected total claim payment to be made by each insurer (A, B, C, D and E) in Year 5.
+
 a) Complete the reference R Code (by replacing question marks‘?’ with appropriate function for data and zi, where data is as used in part (ii) to arrive at the ‘claims5i’ which represents the estimated claim payment for each insurer in Year 5.
-(2)
 
 b) Comment on change in expected claim payment for insurer A, B, C, D and E in year 5 in part (iii) compared to part (ii).
 (3)
@@ -154,10 +156,14 @@ m <- mean(rowMeans(data))
 s <- mean(apply(data,1,var))
 v <- var(rowMeans(data))-mean(apply(data,1,var))/n
 Z <- n/(n+s/v)
+
+```
+
+```{r}
 Z*rowMeans(data)+(1-Z)*m
 ```
 
-# [1] 138.08805 64.47793 139.41039 79.02364
+
 Expected total claim payment from 
 
 --
@@ -172,35 +178,43 @@ As required for other parts
 
 ```{r}
 n
-# [1] 4
+```
+
+```{r}
 m
-# [1] 105.25
+```
+
+```{r}
 s
-# [1] 933.8333
+```
+
+```{r}
 v
-# [1] 1737.625
+```
+
+```{r}
 Z
 # [1] 0.8815584 
 ```
 ---
+
 ### Part (B)
 
 ii) a) R Code
 ```{r}
 data=matrix(c(112,38,89,70,73,130,50,127,75,87,178,80,210,77,113,150,68,150,80,112),5,4)
+
 #no change in other code from part i
+
 n <- ncol(data)
 m <- mean(rowMeans(data))
 s <- mean(apply(data,1,var))
 v <- var(rowMeans(data))-mean(apply(data,1,var))/n
 Z <- n/(n+s/v)
+
 Z*rowMeans(data)+(1-Z)*m
 ```
 
----
-
-
-# [1] 137.11712 65.12725 138.41035 79.35279 97.24249
 
 --- 
 
@@ -213,6 +227,7 @@ Expected total claim payment from
 *  insurer E is USD 97.24 Million (newly added insurer)
 
 required for other parts
+
 ```{r}
 n
 # [1] 4
@@ -231,7 +246,9 @@ Z
 
 Provide the new R code so that ‘data’ includes insurer E and calculate the expected 
 claim payment to be paid by each insurer in year 5. 
+
 b) Comment on the values of Z and ‘s/v’ ratio in part (ii) compared to part (i). 
+
 c) Comment on the change in expected claim payment for insurers A, B C and D in 
 year 5 in part (ii) compared to part (i). 
 
@@ -243,8 +260,7 @@ He has now provided you additional information about volume measure for these 5 
 b) Comparison of calculated quantities
 *  With the introduction of insurer E, credibility factor Z has reduced. 
 
-*  E[s2
-(Theta)] (i.e. ‘s’ in the R code used above) has reduced marginally – this has an effect of 
+*  E[s2(Theta)] (i.e. ‘s’ in the R code used above) has reduced marginally – this has an effect of 
 increasing Z.
 * var[m(theta)] has reduced significantly (i.e. ‘v’ in the R code used above) - this has an effect 
 of reducing Z.
@@ -286,6 +302,9 @@ matrix(c(165,51,119,108,103,186,63,159,112,116,198,78,219,122,126,200,83,188,133
 n <- ncol(data)
 N <- nrow(data)
 X <- data/volume #claim payment per unit of volume measure
+```
+
+```{r}
 Xibar <- rowSums(data)/rowSums(volume)
 Pi <- rowSums(volume) #volume measure for each insurer
 P <- sum(Pi)
@@ -294,27 +313,34 @@ m <- sum(data)/P #average claim payment per unit volume measure across all insur
 s <- mean(rowSums(volume*(X-Xibar)^2)/(n-1))
 v <- (sum(rowSums(volume*(X-m)^2))/(n*N-1)-s)/Pstar
 zi <- Pi/(Pi+s/v) #credibility factor for each insurer
+```
+
+```{r}
 credibilityi <- zi*Xibar+(1-zi)*m #expected claim payment per unit of volume measure
 volume5i <- matrix(c(210,91,192,144,181),5,1) #’volume5i’ is Year 5 volume measure 
 #okay to have 1,5 instead of 5,1 in volume5i (row , column interchange)
 claims5i <- credibilityi*volume5i #claims5i is the expected claim payment in year 5 
 ```
+
+---
+
 Additional output (marks not to be deducted in case if other parts are not provided by student)
+
+
+```{r}
 n
 # [1] 4
 N
 # [1] 5
+```
+
+```{r}
 X
- [,1] [,2] [,3] [,4]
-[1,] 0.6787879 0.6989247 0.8989899 0.7500000
-[2,] 0.7450980 0.7936508 1.0256410 0.8192771
-[3,] 0.7478992 0.7987421 0.9589041 0.7978723
-[4,] 0.6481481 0.6696429 0.6311475 0.6015038
-[5,] 0.7087379 0.7500000 0.8968254 0.7417219
+```
 
 ---
 
-
+```{r}
 #Xibar
 # [1] 0.7610147 0.8581818 0.8408759 0.6357895 0.7762097
 Pi
@@ -334,13 +360,7 @@ zi
 credibility
 # [1] 0.7636262 0.8186443 0.8233883 0.6806434 0.7748683
 volume5
-
- [,1]
-[1,] 210
-[2,] 91
-[3,] 192
-[4,] 144
-[5,] 181 
+```
 
 
 ---
