--- a/00-M1-CS1B-ASI-July-2022/M1-Question3.Rmd
+++ b/00-M1-CS1B-ASI-July-2022/M1-Question3.Rmd
@@ -54,8 +54,8 @@ level.
 ---
 
 ```{r}
-Iran: 128,125,133,104,146,132,125,118,129,124
-Belgium:160,128,169,105,151,164,162,177,185,150,182,158,156,123,141,176,162,172
+Iran <- c(128,125,133,104,146,132,125,118,129,124)
+Belgium <- c(160,128,169,105,151,164,162,177,185,150,182,158,156,123,141,176,162,172)
 ```
 
 ---
@@ -65,12 +65,20 @@ i)
 H0: Annual average rainfall of Belgium and Iran are same
 H1: Annual average rainfall of Belgium and Iran are not same
 
+
+```{r}
 Iran <- c(128,125,133,104,146,132,125,118,129,124)
 Belgium <- c(160,128,169,105,151,164,162,177,185,150,182,158,156,123,141,176,162,172)
+```
 
 ---
 
+```{r}
 var.test(Iran, Belgium)
+```
+
+---
+
 F test to compare two variances
 data: Iran and Belgium
 F = 0.25802, num df = 9, denom df = 17, p-value = 0.04385
@@ -82,8 +90,9 @@ ratio of variances
  0.258022
 Since p-value < 0.05 we fail the variance test thus we reject the null hypothesis that both have equal 
 variance
-[
+
 ---
+
 ii)
 
 ```{r}
