--- a/00-O1-CS1B-ASI-Dec-2022/O1-Question-1.Rmd
+++ b/00-O1-CS1B-ASI-Dec-2022/O1-Question-1.Rmd
@@ -5,16 +5,16 @@ You are required to help him analyse the data to share the results.
 
 #### Exercises
 
-A. Load the data “weights.csv” into R and print the summary of the data. (2)
+A. Load the data “weights.csv” into R and print the summary of the data.
 B. Obtain a 90% confidence interval for the standard deviation of weights lifted by Males
-(M). (3)
+(M).
 C. Assuming that the weights follow normal distribution with mean and standard deviation 
 of data provided for Males.
 Test the Hypothesis that µ=12 kgs in R and obtain the p-value using pnorm or 
 otherwise. 
 D. Further, assuming that the weights follow normal distribution with mean and standard 
 deviation of data provided for Females (F).
-Test the Hypothesis that $\mu=7$ kgs in R and obtain the p-value using <tt>pnorm()</tt> or otherwise.
+Test the Hypothesis that $\mu=7$ kgs in R and obtain the p-value using <tt>pnorm()</ttor otherwise.
 E. Additionally, generate datasets for Males and Females of size 10. Use set.seed(2022)
 to set seed value for generating sample data. 
 Perform paired t test to test the hypothesis that average weights used by Females are 5 
@@ -24,8 +24,8 @@ Comment whether average weights used by Females is less than 5kgs or not.
 
 #################################################################################
 Solution 1:
-i) > data<-read.csv("weights.csv")
-> summary(data)
+i) data<-read.csv("weights.csv")
+summary(data)
 Gender Weights Day 
 Length:216 Min. : 5.00 Min. : 1.00 
 Class :character 1st Qu.: 7.00 1st Qu.: 9.00 
@@ -38,7 +38,7 @@ Mode :character Median :10.00 Median :17.00
 
 ---
 
-ii) > 
+ii) 
 
 ```{r}
 weight_M <- subset(data$Weights, data$Gender == "M" , select = c(data$Weights), drop = 
@@ -49,13 +49,13 @@ Alternate:
 M_subset<-data[data$Gender=="M",]
 weight_M <- M_subset$Weights
 Marks given for other valid alternate solutions. 
-> nm <- length(weight_M) -1 /* n-1
-> sm <- sd(weight_M)
-> nm
+nm <- length(weight_M) -1 /* n-1
+sm <- sd(weight_M)
+nm
 [1] 107
-> sm
+sm
 [1] 2.306458
-> sm*sqrt(nm/qchisq(c(0.95,0.05),nm))
+sm*sqrt(nm/qchisq(c(0.95,0.05),nm))
 [1] 2.075453 2.601171
 (1)
 (0.5)
@@ -63,15 +63,15 @@ Marks given for other valid alternate solutions.
 (1)
 ---
 
-iii) > mum<-12
+iii) mum<-12
 
 ```{r}
-> xbarm <-mean(weight_M)
-> nm <- length(weight_M)
-> Statisticm <- ((xbarm-mum)/(sm/sqrt(nm)))
-> Statisticm
+xbarm <-mean(weight_M)
+nm <- length(weight_M)
+Statisticm <- ((xbarm-mum)/(sm/sqrt(nm)))
+Statisticm
 [1] 3.295867
-> 1- pnorm(Statisticm)
+1- pnorm(Statisticm)
 [1] 0.0004905918
 p- value <5%, there is no significant evidence to accept the null hypothesis
 ```
@@ -92,23 +92,23 @@ p- value = .001332 <5%, there is no significant evidence to accept the null hypo
 
 ---
 [Max 3]
-iv) > weight_F <- subset(data$Weights, data$Gender == "F" , select = c(data$Weights), drop = 
+iv) weight_F <- subset(data$Weights, data$Gender == "F" , select = c(data$Weights), drop = 
 FALSE)
 (1)
 IAI CS1B-1222
  Page 3 of 13
-> nf <- length(weight_F)
-> xbarf
+nf <- length(weight_F)
+xbarf
 [1] 7.703704
-> sf <- sd(weight_F)
-> nf
+sf <- sd(weight_F)
+nf
 [1] 108
-> sf
+sf
 [1] 2.079087
-> Statisticf <- ((xbarf-muf)/(sf/sqrt(nf)))
-> Statisticf
+Statisticf <- ((xbarf-muf)/(sf/sqrt(nf)))
+Statisticf
 [1] 3.517459
-> pnorm(Statisticf)
+pnorm(Statisticf)
 [1] 0.0002178499
 
 ---
@@ -133,14 +133,14 @@ p- value <5%, there is no significance evidence to accept the null hypothesis
 
 ### Part (E)
 
-v) > set.seed(2022)
-> male<-c(rnorm(10,mum,sm))
-> female<-c(rnorm(10,muf,sf))
-> mean(male)
+v) set.seed(2022)
+male<-c(rnorm(10,mum,sm))
+female<-c(rnorm(10,muf,sf))
+mean(male)
 [1] 10.69983
-> mean(female)
+mean(female)
 [1] 7.015142
-> t.test(male,female,paired=TRUE,alternative="less",mu=5)
+t.test(male,female,paired=TRUE,alternative="less",mu=5)
  Paired t-test
 data: male and female
 t = -1.7111, df = 9, p-value = 0.06061
