--- a/00-R1-CS1B-FIA-Sep-2023/R1-Question-2.Rmd
+++ b/00-R1-CS1B-FIA-Sep-2023/R1-Question-2.Rmd
@@ -50,7 +50,7 @@ samples.
 (i) Simulate the two samples in R assuming that the proportion of electric cars in
 population A is 0.02, while in population B it is 0.025, and save the simulated
 samples for later use.
-You must use the command set.seed(12345) to initialise the random
+You must use the command <tt>set.seed(12345)</tt> to initialise the random
 number generator, before you start the simulation. 
 
 ---
@@ -64,6 +64,9 @@ true proportions of electric cars in the two populations A and B, using your
 sample data. 
 Based on previous knowledge, the researcher believes that the proportion of electric
 cars in population A is lower than the proportion of electric cars in population B.
+
+---
+
 (iii) Perform a hypothesis test to investigate this belief using your sample data. In
 doing so, you should include the following steps, in addition to any other
 necessary steps:
@@ -95,6 +98,7 @@ thetahat.A; thetahat.B
 Parts (i)-(iii) were well answered in general. A common error in part (i) was not using properly the inverse transform method as the question asked.
 Part (iv) was not well answered, with comments often being vague or not consistent with the graphs plotted earlier.
 
+---
 
 ese.diff = sqrt( thetahat.A*(1-thetahat.A)/n.A + thetahat.B*(1-thetahat.B)/n.B )
 ese.diff
@@ -108,20 +112,39 @@ The 99% CI for the difference in proportions is [-0.025631365, 0.009520254]
 Hypotheses:
 H0: theta_A = theta_B v. H1: theta_A < theta_B 
 Statistic:
+
+```{r}
 thetahat.common = (sum(data.A)+sum(data.B))/(n.A+n.B)
 thetahat.common
+```
+
 # 0.02571429 
+
+---
+
+#### Standard Error
+
+```{r}
 ese.diff.H0 = sqrt( thetahat.common*(1-thetahat.common) * (1/n.A + 1/n.B))
 ese.diff.H0
 # 0.006979562 
+```
+
+---
+
+
+```{r}
 stat.diff = (thetahat.A-thetahat.B)/ese.diff.H0
 stat.diff
 # -1.154163
+```
 
 ---
 
 The value of the statistic is -1.154163 
 P-value:
+
+
 pvalue.diff =[ pnorm(stat.diff)
 pvalue.diff
 # 0.1242166
