--- a/00-S1-CS1B-ASI-Nov-2023/S1-Question-3.Rmd
+++ b/00-S1-CS1B-ASI-Nov-2023/S1-Question-3.Rmd
@@ -102,29 +102,46 @@ Hint: Use outputs and various sub-parts to determine x for poisson test.
 
 Solution 3:
 i)
+```{r}
 log(y) = 0.5306
+```
+
 poisson distribution is used to model response variable.
 
 ii)
-> Claim.mean<-round(exp(.5306),1)
-> Claim.mean
+```{r}
+Claim.mean<-round(exp(.5306),1)
+Claim.mean
+```
+
 [1] 1.7
 
 ---
 
-### Part CS1B
+### Part C
 
 iii)
+
+```{r}
 log(y) = 1.1394 * GenderF + 1.1394 * GenderM -1.4271 *HealthNonDiabetic
+```
+
 where GenderF =1 if Gender = F else 0
 GenderM =1 if Gender = M else 0
 HealthNonDiabetic =1 if Health= NonDiabetic else 0
 
 --- 
 
+### Part D
+
 iv)
-For model 2, “-1” is used in Glm R formula to not take the intercepts while fitting the model.
-Thus, no intercept exits.
+
+* For model 2, “-1” is used in Glm R formula to not take the intercepts while fitting the model.
+* Thus, no intercept exits.
+
+
+---
+
 
 v)
 AIC (=59.4) of model 2 which is lower than AIC (71.1) of model 1. This indicates that model 2 is better.
@@ -134,20 +151,20 @@ AIC (=59.4) of model 2 which is lower than AIC (71.1) of model 1. This indicates
 ### Part F
 vi)
 #AIC = - 2LogL(Model) + 2*Parameters
-> #LogL(Model) = Parameters - AIC/2
-> aic<-59.403
-> par<-3
+#LogL(Model) = Parameters - AIC/2
+aic<-59.403
+par<-3
 >
-> L<- par - aic/2
-> L
+L<- par - aic/2
+L
 [1] -26.7015
 
 --- 
 
 vii)
 #Total claims = Mean claims * Total policies
-> x<-Claim.mean*20
-> poisson.test(x=X,T=20,r=1.5,conf.level = 0.99)
+x<-Claim.mean*20
+poisson.test(x=X,T=20,r=1.5,conf.level = 0.99)
 Exact Poisson test
 
 data: X time base: 20
@@ -159,7 +176,7 @@ sample estimates:
 event rate
 1.7
 >
-> # We cannot reject the null hypothesis that parameter is equal to 1.5.
+# We cannot reject the null hypothesis that parameter is equal to 1.5.
 [Max 5]
 
 ---
